--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,12 @@ spring.datasource.user.url=jdbc:postgresql://localhost:5432/java_to_dev_main_db?
 spring.datasource.user.username=postgres
 spring.datasource.user.password=butikk123
 spring.datasource.user.driver-class-name=org.postgresql.Driver
-spring.datasource.user.hikari.schema=app_db
 
-#DATASOURCE 2
-spring.datasource.card.url=jdbc:postgresql://localhost:5432/java_to_dev_secondary_db?createDatabaseIfNotExist=true
-spring.datasource.card.username=postgres
-spring.datasource.card.password=butikk123
-spring.datasource.card.driver-class-name=org.postgresql.Driver
-spring.datasource.card.hikari.schema=credit_card_db
+#DATASOURCE FOR STORE BANK SPECIFIC DATA
+spring.datasource.bank.url=jdbc:postgresql://localhost:5432/java_to_dev_secondary_db?createDatabaseIfNotExist=true
+spring.datasource.bank.username=postgres
+spring.datasource.bank.password=butikk123
+spring.datasource.bank.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
