--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #DATASOURCE FOR STORE USER SPECIFIC DATA
 spring.datasource.user.url=jdbc:postgresql://localhost:5432/java_to_dev_main_db?createDatabaseIfNotExist=true
 spring.datasource.user.username=postgres
-spring.datasource.user.password=butikk123
+spring.datasource.user.password=password
 spring.datasource.user.driver-class-name=org.postgresql.Driver
 
 #DATASOURCE FOR STORE BANK SPECIFIC DATA
 spring.datasource.bank.url=jdbc:postgresql://localhost:5432/java_to_dev_secondary_db?createDatabaseIfNotExist=true
 spring.datasource.bank.username=postgres
-spring.datasource.bank.password=butikk123
+spring.datasource.bank.password=password
 spring.datasource.bank.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
